<resources>
    <string name="app_name">Bookshelf</string>
    <string name="string_chinese">Chinese</string>
    <string name="string_english">English</string>

    <string name="confirmation">Confirmation</string>
    <string name="sure_to_delete">Are you sure to delete this item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="str_price">Price</string>
    <string name="str_title">Name</string>
    <string name="str_name">Name</string>
    <string name="submit">Add</string>
    <string name="str_author">Author</string>
    <string name="str_translator">Translator</string>
    <string name="str_publisher">Publisher</string>
    <string name="str_pubDate">PubDate</string>
    <string name="str_isbn">ISBN</string>
    <string name="edit_book_item_name">Edit Book Detail</string>
    <string name="status_first">Reading</string>
    <string name="status_second">Idle</string>
    <string name="law_first">Law</string>
    <string name="law_second">Childhood</string>
    <string name="law_third">Animal</string>
    <string name="law_fourth">Space</string>
    <string name="law_fifth">Computer</string>
    <string name="law_sixth">Humorous</string>
    <string name="setting_name">Setting</string>
</resources>