<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="126dp"
        android:layout_height="270dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="127dp"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/textViewTile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_title"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="225dp" />

            <EditText
                android:id="@+id/edittext_book_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="言论的边界"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="217dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="126dp"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/textViewAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_author"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="225dp" />

            <EditText
                android:id="@+id/edittext_book_item_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="[美]安东尼·刘易斯"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="217dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/textViewTranslator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_translator"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="225dp" />

            <EditText
                android:id="@+id/edittext_book_item_translator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="徐爽"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="217dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/textViewPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_publisher"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="225dp" />

            <EditText
                android:id="@+id/edittext_book_item_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="法律出版社"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="217dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="127dp"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/textViewPubDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_pubDate"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="225dp" />

            <EditText
                android:id="@+id/edittext_book_item_pubYear"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="2010"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="217dp" />

            <TextView
                android:id="@+id/textViewPoint"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="·"
                android:textSize="30dp"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="225dp" />

            <EditText
                android:id="@+id/edittext_book_item_pubMonth"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="05"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="217dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="127dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_isbn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="识别条形码" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewISBN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_isbn"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="225dp" />

            <EditText
                android:id="@+id/edittext_book_item_isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="9787511802057"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="217dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Details"
                android:textColor="@color/gray"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="225dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/divide_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewReadingStatus"
                    android:layout_width="97dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_readingstatus" />
            </LinearLayout>

            <Spinner
                android:id="@+id/Spinner_one"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:entries="@array/ReadingStatus"
                android:spinnerMode="dropdown"
                tools:ignore="TouchTargetSizeCheck" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewBookShelfNum"
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_bookshelf" />
            </LinearLayout>

            <Spinner
                android:id="@+id/Spinner_two"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:entries="@array/BookShelfNumber"
                android:spinnerMode="dropdown"
                tools:ignore="TouchTargetSizeCheck" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageViewNote"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_note" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/edittext_book_item_note"
                android:layout_width="329dp"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:text="Notes"
                android:textColor="@color/gray"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="217dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_label" />

                </LinearLayout>

            </LinearLayout>

            <Spinner
                android:id="@+id/Spinner_three"
                android:layout_width="329dp"
                android:layout_height="43dp"
                android:entries="@array/Label"
                android:spinnerMode="dropdown"
                tools:ignore="TouchTargetSizeCheck" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageViewHyperlink"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_hyperlink" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/edittext_book_item_hyperlink"
                android:layout_width="328dp"
                android:layout_height="50dp"
                android:inputType="textUri"
                android:text="https://jike.xyz/img/qr/ma_wifi_code_apikey.jpg"
                android:textColor="@color/gray"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="217dp" />


        </LinearLayout>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"></Button>

    </LinearLayout>
</FrameLayout>